--- a/_config.yml
+++ b/_config.yml
@@ -47,37 +47,36 @@ external-links:    # input only your own url slug. The icons with missing entrie
 
 # Skills Section - Add the list of your Skills by categories/tools. The indentation for each level needs to be precise. 
 skills:
-  - category: 3D Modeling
+  - category: Genral Formulation
     tools:
-    - Onshape
-    - Solidworks
-    - Creo
-    - Fusion 360 (Autodesk)
-    - Blender (for complex shapes or animations)
-    - Siemens NX
-    - Inventor (Autodesk)
-    - CATIA (Dassault Systèmes)
-  - category: Prototyping
+    - Direct and indirect emulsions
+    - Microemulsions
+    - Designing and respecting specifications
+    - Industrial mixing (
+  - category: Analytical Chemistry
     tools:
-    - SLA
-    - CNC
-    - FDM
-    - SLS
-    - DMLS
-    - PolyJet Printing
-    - Vacuum Casting
-    - Laser Cutting
-    - Water Jet Cutting
-    - Arduino / Raspberry Pi
-    - Breadboarding for circuit testing
-  - category: Design Standards / Practices
+    - HPLC
+    - GPC
+    - DSC
+    - TGA
+    - IR-FTIR
+    - Granulometry
+  - category: Computer Skills
     tools:
-    - GD&T ASME Y14
-    - ISO fits and tolerances
-    - PLM (PTC Windchill / Arena)   
-  - category: PCB Design
+    - Microsoft Office (Word, Powerpoint, Excel)
+    - Microsoft Teams
+    - Outlook
+    - Python (numpy, pandas, scikit-learn, RDKit)
+    - SQL 
+  - category: Paints and Pigments
     tools:
-    - Altium Designer
+    - Water and solvent based
+    - 1k and 2k formulations
+    - Gloss and colour
+ - category: Cosmetics
+    tools:
+    - Direct and indirect emulsions
+    - Microem
     - Altium
     - Eagle 
     - KiCad
