--- a/_config.yml
+++ b/_config.yml
@@ -15,10 +15,10 @@ title: Siân Tunstall's Portfolio # This is what shows up in the tab of the brow
 name: Siân TUNSTALL
 headline: R&D Formulation Chemist
 description: >- # dont remove this line. this will ignore all new lines until the next section
-  Hello, and welcome to my portfolio!
+ <p align="justify"> Hello, and welcome to my portfolio!
 
-  I created this webpage to showcase what I can bring to your company as a formulation chemist. Please feel free to peruse my projects and initiatives that I have detailed below.
-  I am not afraid of going above and beyond what is asked for, if it can benefit the project and the team (like creating an online portfolio almost from scratch). My curiosity and perseverance help me dive into projects, understand what is needed and plan what my team and I can do to reach our goals.
+  I created this webpage to showcase what I can bring to your company as a formulation chemist. Please feel free to peruse my projects and initiatives that I have detailed below.<br/>
+  I am not afraid of going above and beyond what is asked for, if it can benefit the project and the team (like creating an online portfolio almost from scratch). My curiosity and perseverance help me dive into projects, understand what is needed and plan what my team and I can do to reach our goals.</p>
 
 
 
