--- a/_config.yml
+++ b/_config.yml
@@ -104,7 +104,7 @@ skills:
     - Hazard Analysis Critical Control Point (HACCP)
     - Health and safety analysis of new methods and protocoles
 
-formspree-key:   https://formspree.io/f/xldbknoj
+formspree-key:   xldbknoj
 
 
 
